Fix left pixel of drawings getting cut off.

--- a/static/stream.css
+++ b/static/stream.css
@@ -185,7 +185,7 @@ img.user-type-icon {
 }
 
 .pictochat-drawing { 
-  margin: 2px 2px 0px 2px;
+  margin: 2px 2px 0px 3px;
 }
 
 #pictochat-container {
